<resources>
    <string name="app_name">Music For Life</string>
    <string name="loading">0 %</string>
    <string name="logoImage">TODO</string>
    <string name="backgroundsplash">TODO</string>
    <string name="register_loginActivity">Register</string>
    <string name="log_in_loginActivity">Log In</string>
    <string name="user_name_loginActivity">User Name</string>
    <string name="password_loginActivity">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="surename">Surename</string>
    <string name="forename">Forename</string>
    <string name="email_loginActivity">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="username_welcomemessage">Username</string>
    <string name="welcome_to_music_for_life">Welcome To Music For Life</string>

    <string-array name="Tickets">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="Years">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>

    </string-array>
    <string name="title_activity_location">Map</string>


</resources>
