<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".LogInActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="13dp"
        android:background="@android:color/holo_red_light"
        android:onClick="registerButtonClicked"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="244dp"
        android:layout_height="234dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/emailLogEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/passwordLogEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="223dp"
        android:layout_height="70dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="94dp"
        android:background="@android:color/holo_red_light"
        android:onClick="loginButtonClicked"
        android:text="@string/log_in"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogEditText" />

</android.support.constraint.ConstraintLayout>